package com.esiea.pootd2.commands;

/**
 * Abstract class for commands.
 */
public abstract class Command {
}
