package com.esiea.pootd2.commands;

/**
 * Command for listing the contents of the current directory.
 */
public class ListCommand extends Command {
}
