package com.esiea.pootd2.interfaces;

/**
 * Interface for the user interface.
 */
public interface IUserInterface {
    /**
     * Runs the user interface.
     */
    public void run();
}